# example-ssi-injection

./: .gitignore  Cargo.toml  README.md
honeypot/: Dockerfile  README.md
honeypot/html/: index.html
src/: main.rs
templates/: search.html.tera
