[package]
name = "ssi-example"
version = "0.1.0"
authors = ["Sehny <msehnout@users.noreply.github.com>"]

[dependencies]
reqwest = "0.8.1"
rocket = "0.3.3"
rocket_codegen = "0.3.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates"]
